Fix CSV parser to correctly support quoted cells

BUG: 463246