kmymoney/plugins/csv/import/core/tests/parsedata-test.cpp
@@ -1,9 +1,12 @@
 /*
     SPDX-FileCopyrightText: 2010-2012 Allan Anderson <agander93@gmail.com>
+    SPDX-FileCopyrightText: 2022 Alexander Kuznetsov <alx.kuzza@gmail.com>
     SPDX-License-Identifier: GPL-2.0-or-later
 */
 
 #include "parsedata-test.h"
+#include <iostream>
+#include <map>
 
 #include <QTest>
 #include <QString>
@@ -29,19 +32,28 @@ void ParseDataTest::cleanup()
 
 void ParseDataTest::parseSplitString()
 {
-    QVector<FieldDelimiter> delimiters {FieldDelimiter::Comma, FieldDelimiter::Semicolon, FieldDelimiter::Colon, FieldDelimiter::Tab};
-    Q_FOREACH (const auto delimiter, delimiters) { //        All four delimiters should produce same result
+    QVector<FieldDelimiter> delimiters{FieldDelimiter::Comma, FieldDelimiter::Semicolon, FieldDelimiter::Colon, FieldDelimiter::Tab};
+    QVector<QChar> delimiter_chars{',', ';', ':', '\t'};
+    for (auto i = 0; i < delimiters.size(); i++) {
+        auto delimiter_char = delimiter_chars[i];
+        auto delimiter = delimiters[i];
+
         m_parse->setFieldDelimiter(delimiter);
 
-        QString input = "abc,defgh,";//  When this string is QString::split(), two strings
-        //  ....will result if ',' is the field delimiter.
-        //      This is not good.
-        input.prepend('"');  //            make input string quoted
-        input.append('"');
-        QStringList expected;
-        expected << "abc,defgh,";
-        QVERIFY(m_parse->parseLine(input) == expected);   // if parseLine() detects the condition,
-    }                                                   // ...it rebuilds the string
+        // construct CSV string to parse like: abc,defgh,"abc "",def"
+        QString input;
+        input.append("abc");
+        input.append(delimiter_char);
+        input.append("defgh");
+        input.append(delimiter_char);
+        input.append("\"abc \"\",def\""); // outer quotes, comma inside and inside quote
+
+        QStringList expected = {"abc", "defgh", "abc \",def"};
+
+        auto result = m_parse->parseLine(input);
+
+        QVERIFY(result == expected);
+    }
 }
 
 void ParseDataTest::parse_data()
